--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
-    
+    <header class="header">
+        <img src="./images/logo/ohmyfood.png" alt="Logo de OhMyFood">
+    </header>
 </body>
 </html>
