feat(front-end): ajout de location

--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
     <header class="header">
         <img src="./images/logo/ohmyfood.png" alt="Logo de OhMyFood">
     </header>
+    <main>
+        <div class="location">
+            <i class="fas fa-map-marker-alt"></i>
+            Paris, Belleville
+        </div>
+    </main>
 </body>
 </html>
