--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             <i class="fas fa-map-marker-alt"></i>
             Paris, Belleville
         </div>
+        <section class="hero">
+            <h1>Réservez le menu qui<br> vous convient</h1>
+            <h2>Découvrez des restaurants d'exception,<br> séléctionnées par nos soins.</h2>
+            <div class="button">
+                <a href="#" class="button">Explorer nos restaurants</a>
+            </div>
+        </section>
     </main>
 </body>
 </html>
