fix(front-end): hiérarchie des titres

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         </div>
         <section class="hero">
             <h1>Réservez le menu qui<br> vous convient</h1>
-            <h2>Découvrez des restaurants d'exception,<br> séléctionnées par nos soins.</h2>
+            <div class="little">Découvrez des restaurants d'exception,<br> séléctionnées par nos soins.</div>
             <div class="button">
                 <a href="#" class="button">Explorer nos restaurants</a>
             </div>
         </section>
+
     </main>
 </body>
 </html>
