--- a/index.html
+++ b/index.html
@@ -29,7 +29,33 @@
                 <a href="#" class="button">Explorer nos restaurants</a>
             </div>
         </section>
-
+        <section class="working">
+            <h2>Fonctionnement</h2>
+            <div class="list">
+                <div class="work-card">
+                    <div class="number">1</div>
+                    <div class="icone">
+                        <i class="fas fa-mobile-alt"></i>
+                    </div>
+                    <h3>Choissisez un restaurant</h3>
+                </div>
+                <div class="work-card">
+                    <div class="number">2</div>
+                    <div class="icone">
+                        <i class="fas fa-list-ul"></i>
+                    </div>
+                    <h3>Composez votre menu</h3>
+                </div>
+                <div class="work-card">
+                    <div class="number">3</div>
+                    <div class="icone">
+                        <i class="fas fa-store"></i>
+                    </div>
+                    <h3>Dégustez au restaurant</h3>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
