--- a/index.html
+++ b/index.html
@@ -55,7 +55,101 @@
                 </div>
             </div>
         </section>
+        <section class="restaurant">
+            <h2>Restaurants</h2>
+            <div class="list">
+                <article class="card">
+                    <div class="image">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="La palette du goût">
+                        <span class="new">Nouveau</span>
+                    </div>
+                    <div class="bottom">
+                        <h3>La palette du goût</h3>
+                        <span>Ménilmontant</span>
+                        <div class="heart">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 391.837 391.837"
+                                xml:space="preserve">
+                                <g>
+                                    <path
+                                        d="M285.257,35.528c58.743,0.286,106.294,47.836,106.58,106.58
+                                    c0,107.624-195.918,214.204-195.918,214.204S0,248.165,0,142.108c0-58.862,47.717-106.58,106.58-106.58l0,0
+                                    c36.032-0.281,69.718,17.842,89.339,48.065C215.674,53.517,249.273,35.441,285.257,35.528z" />
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="image">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût">
+                        <span class="new">Nouveau</span>
+                    </div>
+                    <div class="bottom">
+                        <h3>La note enchantée</h3>
+                        <span>Charonne</span>
+                        <div class="heart">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 391.837 391.837"
+                                xml:space="preserve">
+                                <g>
+                                    <path
+                                        d="M285.257,35.528c58.743,0.286,106.294,47.836,106.58,106.58
+                                    c0,107.624-195.918,214.204-195.918,214.204S0,248.165,0,142.108c0-58.862,47.717-106.58,106.58-106.58l0,0
+                                    c36.032-0.281,69.718,17.842,89.339,48.065C215.674,53.517,249.273,35.441,285.257,35.528z" />
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="image">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La palette du goût">
+                    </div>
+                    <div class="bottom">
+                        <h3>À la française</h3>
+                        <span>Cité rouge</span>
+                        <div class="heart">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 391.837 391.837"
+                                xml:space="preserve">
+                                <g>
+                                    <path
+                                        d="M285.257,35.528c58.743,0.286,106.294,47.836,106.58,106.58
+                                    c0,107.624-195.918,214.204-195.918,214.204S0,248.165,0,142.108c0-58.862,47.717-106.58,106.58-106.58l0,0
+                                    c36.032-0.281,69.718,17.842,89.339,48.065C215.674,53.517,249.273,35.441,285.257,35.528z" />
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="image">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="La palette du goût">
+                    </div>
+                    <div class="bottom">
+                        <h3>Le délice des sens</h3>
+                        <span>Folie-Méricourt</span>
+                        <div class="heart">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 391.837 391.837"
+                                xml:space="preserve">
+                                <g>
+                                    <path
+                                        d="M285.257,35.528c58.743,0.286,106.294,47.836,106.58,106.58
+                                    c0,107.624-195.918,214.204-195.918,214.204S0,248.165,0,142.108c0-58.862,47.717-106.58,106.58-106.58l0,0
+                                    c36.032-0.281,69.718,17.842,89.339,48.065C215.674,53.517,249.273,35.441,285.257,35.528z" />
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
+
 </body>
 
 </html>
