feat(front-end): add top background

--- a/menu/a-la-française.html
+++ b/menu/a-la-française.html
@@ -17,6 +17,11 @@
         <i class="fas fa-arrow-left"></i>
         <img src="../images/logo/ohmyfood.png" alt="" srcset="">
     </header>
+    <main>
+        <section class="top-background">
+            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+        </section>
+    </main>
 </body>
 
 </html>
