--- a/menu/a-la-française.html
+++ b/menu/a-la-française.html
@@ -14,12 +14,138 @@
 
 <body>
     <header class="header">
+        <!-- <a href="../index.html"> -->
         <i class="fas fa-arrow-left"></i>
-        <img src="../images/logo/ohmyfood.png" alt="" srcset="">
+        <!-- </a> -->
+        <div>
+            <img src="../images/logo/ohmyfood.png" alt="" srcset="">
+        </div>
     </header>
     <main>
         <section class="top-background">
             <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+        </section>
+
+        <section class="menu">
+            <div class="title">
+                <h1>À la française</h1>
+                <div class="heart">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px" y="0px" viewBox="0 0 391.837 391.837" xml:space="preserve">
+                        <g>
+                            <path d="M285.257,35.528c58.743,0.286,106.294,47.836,106.58,106.58
+                            c0,107.624-195.918,214.204-195.918,214.204S0,248.165,0,142.108c0-58.862,47.717-106.58,106.58-106.58l0,0
+                            c36.032-0.281,69.718,17.842,89.339,48.065C215.674,53.517,249.273,35.441,285.257,35.528z" />
+                        </g>
+                    </svg>
+                </div>
+            </div>
+            <div class="plat">
+                <h2 class="plat-type">ENTRÉES</h2>
+                <div class="list">
+                    <div class="card">
+                        <div class="name">
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <span>Aux zestes d'orange</span>
+                        </div>
+                        <div class="price">25€</div>
+                        <div class="active">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="name">
+                            <h3>Velouté de légumes d'antan</h3>
+                            <span>Carotte, panais, topinambour</span>
+                        </div>
+                        <div class="price">35€</div>
+                        <div class="active">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="name">
+                            <h3>Soupe à l'oignon</h3>
+                            <span>Revisitée</span>
+                        </div>
+                        <div class="price">20€</div>
+                        <div class="active">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+
+                </div>
+                <h2 class="plat-type">PLATS</h2>
+                <div class="list">
+                    <div class="card">
+                        <div class="name">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <span>Accompagnées d'une purée de panais</span>
+                        </div>
+                        <div class="price">40€</div>
+                        <div class="active">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="name">
+                            <h3>Magret de canard</h3>
+                            <span>Et parmentier de pommes de terre</span>
+                        </div>
+                        <div class="price">35€</div>
+                        <div class="active">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="name">
+                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <span>Sur son lit de gnocchis aux légumes</span>
+                        </div>
+                        <div class="price">44€</div>
+                        <div class="active">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+
+                </div>
+                <h2 class="plat-type">DESSERTS</h2>
+                <div class="list">
+                    <div class="card">
+                        <div class="name">
+                            <h3>Pétales de violettes glacés</h3>
+                            <span>Et purée de noisettes</span>
+                        </div>
+                        <div class="price">18€</div>
+                        <div class="active">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="name">
+                            <h3>Fondant au chocolat</h3>
+                            <span>Revisité</span>
+                        </div>
+                        <div class="price">22€</div>
+                        <div class="active">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="name">
+                            <h3>Millefeuille croustillant</h3>
+                            <span>Myrtilles et pâte d’amande</span>
+                        </div>
+                        <div class="price">23€</div>
+                        <div class="active">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
