feat(front-end): add footer

--- a/menu/a-la-française.html
+++ b/menu/a-la-française.html
@@ -148,6 +148,17 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="logo">
+            ohmyfood
+        </div>
+        <div class="navigation">
+            <h2 class="text"><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></h2>
+            <h2 class="text"><a href="#"><i class="fas fa-hands-helping"></i> Devenir un partenaire</a></h2>
+            <h2 class="text"><a href="#">Mentions légales</a></h2>
+            <h2 class="text"><a href="mailto:example@example.com">Contact</a></h2>
+        </div>
+    </footer>
 </body>
 
 </html>
