--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 </head>
 
 <body>
+    <div class="loader">
+        <div class="center">
+            <img src="./images/logo/ohmyfood@2x.svg" alt="Logo OhMyFood">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                style="margin: auto; background: none; display: block; shape-rendering: auto;" width="200px"
+                height="200px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
+                <circle cx="50" cy="50" fill="none" stroke="#9356dc" stroke-width="10" r="35"
+                    stroke-dasharray="164.93361431346415 56.97787143782138">
+                    <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1s"
+                        values="0 50 50;360 50 50" keyTimes="0;1"></animateTransform>
+                </circle>
+            </svg>
+        </div>
+    </div>
     <header class="header">
         <img src="./images/logo/ohmyfood.png" alt="Logo de OhMyFood">
     </header>
