feat(front-end): ajout bouton commander

--- a/menu/a-la-française.html
+++ b/menu/a-la-française.html
@@ -146,6 +146,10 @@
                     </div>
                 </div>
             </div>
+
+            <div class="button">
+                <a href="javascript:void(1)">Commander</a>
+            </div>
         </section>
     </main>
     <footer class="footer">
