fix(front-end): header and responsive

--- a/menu/a-la-française.html
+++ b/menu/a-la-française.html
@@ -14,9 +14,11 @@
 
 <body>
     <header class="header">
-        <!-- <a href="../index.html"> -->
-        <i class="fas fa-arrow-left"></i>
-        <!-- </a> -->
+        <div class="arrow">
+            <a href="../">
+                <i class="fas fa-arrow-left"></i>
+            </a>
+        </div>
         <div>
             <img src="../images/logo/ohmyfood.png" alt="" srcset="">
         </div>
