fix(front-end): w3c validator

--- a/menu/a-la-française.html
+++ b/menu/a-la-française.html
@@ -20,13 +20,13 @@
             </a>
         </div>
         <div>
-            <img src="../images/logo/ohmyfood.png" alt="" srcset="">
+            <img src="../images/logo/ohmyfood.png" alt="Logo de OhMyFood">
         </div>
     </header>
     <main>
-        <section class="top-background">
+        <div class="top-background">
             <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-        </section>
+        </div>
 
         <section class="menu">
             <div class="title">
