--- a/menu/a-la-française.html
+++ b/menu/a-la-française.html
@@ -45,7 +45,7 @@
             <div class="plat">
                 <h2 class="plat-type">ENTRÉES</h2>
                 <div class="list">
-                    <div class="card">
+                    <div class="card n-1">
                         <div class="name">
                             <h3>Tartare de poulpe acidulé</h3>
                             <span>Aux zestes d'orange</span>
@@ -55,7 +55,7 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card n-2">
                         <div class="name">
                             <h3>Velouté de légumes d'antan</h3>
                             <span>Carotte, panais, topinambour</span>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card n-3">
                         <div class="name">
                             <h3>Soupe à l'oignon</h3>
                             <span>Revisitée</span>
@@ -80,7 +80,7 @@
                 </div>
                 <h2 class="plat-type">PLATS</h2>
                 <div class="list">
-                    <div class="card">
+                    <div class="card n-4">
                         <div class="name">
                             <h3>Coquilles Saint-Jacques</h3>
                             <span>Accompagnées d'une purée de panais</span>
@@ -90,7 +90,7 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card n-5">
                         <div class="name">
                             <h3>Magret de canard</h3>
                             <span>Et parmentier de pommes de terre</span>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card n-6">
                         <div class="name">
                             <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                             <span>Sur son lit de gnocchis aux légumes</span>
@@ -115,7 +115,7 @@
                 </div>
                 <h2 class="plat-type">DESSERTS</h2>
                 <div class="list">
-                    <div class="card">
+                    <div class="card n-7">
                         <div class="name">
                             <h3>Pétales de violettes glacés</h3>
                             <span>Et purée de noisettes</span>
@@ -125,7 +125,7 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card n-8">
                         <div class="name">
                             <h3>Fondant au chocolat</h3>
                             <span>Revisité</span>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card n-9">
                         <div class="name">
                             <h3>Millefeuille croustillant</h3>
                             <span>Myrtilles et pâte d’amande</span>
