--- a/menu/a-la-française.html
+++ b/menu/a-la-française.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="top-background">
-            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant OhMyFood">
         </div>
 
         <section class="menu">
