--- a/menu/la-palette-du-gout.html
+++ b/menu/la-palette-du-gout.html
@@ -39,6 +39,10 @@
                             c0,107.624-195.918,214.204-195.918,214.204S0,248.165,0,142.108c0-58.862,47.717-106.58,106.58-106.58l0,0
                             c36.032-0.281,69.718,17.842,89.339,48.065C215.674,53.517,249.273,35.441,285.257,35.528z" />
                         </g>
+                        <linearGradient id="heart-gradient" x2="1" y2="1">
+                            <stop offset="20%" stop-color="#ff79da" />
+                            <stop offset="90%" stop-color="#9356dc" />
+                        </linearGradient>
                     </svg>
                 </div>
             </div>
